--- a/src/PolygonalMath/PolygonalMath.vcxproj
+++ b/src/PolygonalMath/PolygonalMath.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Math\PolyDouble.cpp" />
     <ClCompile Include="Math\PolyFloat.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -29,6 +30,7 @@
     <ClCompile Include="Vector\Vec2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Math\PolyDouble.h" />
     <ClInclude Include="Math\PolyFloat.h" />
     <ClInclude Include="PolygonalMath.h" />
     <ClInclude Include="stdafx.h" />
